Add optional preview profile for GPU Llama3